Updated to Minecraft 1.21.3 (Fabric 0.107.0+1.21.3, NeoForge 21.3.56, Forge 53.0.47) - Updated Cloth Config support (16.0.141) (Fabric/Quilt) - Updated ModMenu support (12.0.0) (Fabric/Quilt) - updated REI support (17.0.789) (Fabric/Quilt & NeoForge) - temporary removed JEI support until it is ported to 1.21.3 (Forge & NeoForge) - temporary removed The One Probe support until it is ported to 1.21.3 (NeoForge)